# Htx_project_attemp_101

./: .cursorrules  .env.template  .gitignore  .markdownlint.json  .ports_config  .pre-commit-config.yaml  ACTIVATION_CHECKLIST.md  API_FIX_REPORT.md  API_KEYS_CONFIGURATION.md  ARCHITECTURE.md  BACKEND_ANALYSIS_REPORT.md  CHANGELOG.md  CODEOWNERS  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DOCKER_BUILD_FIX_SUMMARY.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_RELEASE_PACKAGE.md  FRONTEND_AUDIT_REPORT.md  HTX_INTERFACE_SYSTEM.md  HTX_WSL2_DESIGN_PLAN.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  ML_INTEGRATION_SUMMARY.md  Makefile  PERSONAL_SETUP_GUIDE.md  PRE_RELEASE_TEST_PLAN.md  PROJECT_ACTIVATION_SUMMARY.md  README.md  README_WSL2.md  RELEASE_CHECKLIST.md  REPOSITORY_SUMMARY.md  TODO.md  WSL_DOCKER_FIX.md  WSL_ONLY.md  activate_ml.bat  activate_ml.sh  (+57 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  markdown-link-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md  security.md
.github/workflows/: ci.yml  code-quality.yml  codeql.yml  release.yml  wiki-generator.yml
.qoder/quests/: docker-project-api-fix.md
analysis/: filesystem_performance_analysis.md  process_management_port_conflicts.md  qoder_experiment_analysis.md  virtual_environment_conflicts.md  wsl2_path_analysis.md
backend/: .dockerignore  Dockerfile  Untitled-1.txt  alembic.ini  debug_signature.py  env.example  env.postgres  pyproject.toml  requirements-dev.txt  requirements-docker.txt  requirements-minimal.txt  requirements.txt  run.py  test_api.py  test_websocket.py  websocket_test.html
backend/alembic/: env.py
backend/alembic/versions/: 76485e958611_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: reference.py
backend/app/api/v1/endpoints/: advanced_pnl.py  cashflow.py  files.py  gcp.py  health.py  htx.py  htx_reference.py  insights.py  ml.py  ml_analytics.py  orders.py  pnl.py  secrets.py  trades.py  websockets.py
backend/app/core/: config.py  logging.py  secrets_manager.py
backend/app/db/: init_db.py  session.py
backend/app/db/migrations/: env.py
backend/app/models/: base.py  batch_job.py  deposit.py  embedding.py  experiment.py  trade.py  transfer.py  withdraw.py
backend/app/services/: Htx_project_attemp_101.code-workspace  advanced_pnl.py  cache.py  cashflow.py  db_service.py  embedding_service.py  enhanced_risk_metrics.py  fingpt_service.py  htx_client.py  htx_client_real.py  mistral_service.py  ml_analytics.py  ml_file_analytics.py  mock_data.py  openai_client.py  parser_csv.py  pnl.py  quick_insights.py  scheduler.py  schemas.py  secret_manager.py  threecommas.py  websocket.py
backend/app/services/gcp/: __init__.py  pubsub_client.py  scheduler_client.py  secret_manager.py  storage_client.py  vertex_ai_client.py
backend/app/workers/: background_tasks.py  tasks.py
backend/data/raw/: test_data.csv
backend/examples/: gcp_storage_demo.py
backend/scripts/: migrate_to_postgres.py  setup_postgres.py
backend/tests/: Full_push.py  conftest.py  test_advanced_pnl.py  test_api_client.py  test_export_functionality.py  test_files.py  test_gcp_integrations.py  test_gcp_performance.py  test_health.py  test_parsers.py  test_quick_insights.py  test_secrets_manager.py  test_storage_client.py  test_websocket_service.py
devops/: ci_cd_pipeline_wsl2_environment.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  api.http  architecture.md  dependency_analysis.md  hardware_setup.md  htx_project_report.md  index.md  integration_plan.md  mkdocs.yml  ml-activation-plan.md  phase-2.3-websocket-complete.md  postgres-migration.md  solana-sui-ml-plan.md  wsl-migration.md  wsl-setup.md  wsl_setup.md
docs/api/: overview.md
docs/ml/: overview.md
docs/setup/: installation.md
frontend/: .dockerignore  50x.html  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: AccountSummary.jsx  AppNavigation.jsx  DataRequirements.jsx  ErrorBoundary.jsx  FileUpload.jsx  FileUploadNew.jsx  GlobalLoading.jsx  NotificationSystem.jsx  OrderList.jsx  PerformanceMetrics.jsx  PnLOverview.jsx  PnlChart.jsx  PredictionsChart.jsx  RealTimeDashboard.jsx  RecentActivity.jsx  RiskMetrics.jsx  TradingOverview.jsx  TradingPatterns.jsx  TransactionList.jsx  WebSocketStatus.jsx
frontend/src/config/: apiConfig.js
frontend/src/contexts/: SettingsContext.jsx
frontend/src/hooks/: useAdvancedPnL.js  useDataFilters.js  useWebSocket.js
githooks/: post-commit.sample
htx_project/: README.md  config.yaml  main.py  requirements.txt
htx_project/db/: init_db.py  session.py
htx_project/models/: base.py
htx_project/src/: main.py
implementation/: database_optimization_wsl2_filesystem.md  path_configuration_fixes.md  safe_process_management_pid_tracking.md  unified_virtual_environment_management.md
journal_roadmap/: journal.md  logger.py  roadmap.md
journal_roadmap/journal_roadmap/: .env.template  logger.py  roadmap.md
mcp_server/: Dockerfile  README.md  __init__.py  __main__.py  config.json  htx_mcp_server.py  htx_mcp_simple.py  mcp_config.json  requirements.txt  run_docker.sh  server.py  start_mcp.sh  test_mcp.py
monitoring/: health_check_monitoring_framework.md
operations/: backup_recovery_procedures.md
scripts/: Untitled-1.txt  encrypt_htx_keys.py  full_push.py  full_restart.sh  generate_wiki.py  log_task.bat  ml_benchmark.py  pre_release_test.py  prepare_release.py  push_project.bat  run_dev.ps1  run_dev.sh  security_check.py  setup_docker.sh  setup_env.bat  setup_env.sh  setup_linux.sh  setup_postgres.sh  setup_postgres_wsl.sh  setup_wsl2.sh  test_insights.sh  test_ml_endpoints.sh  test_performance.py  wsl_setup.sh
scripts/scripts/: log_task.bat  push_project.bat  setup_env.bat
testing/: comprehensive_test_coverage_strategy.md  htx_api_test_collection.json  performance_testing_scenarios.md  security_testing_framework.md
(+35 files in other folders)
